--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body{
     background: #000000;
 }
 
+/* Main Container */
+
 .container{
     position: relative;
     width: 400px;
@@ -26,12 +28,15 @@ body{
     transition: 0.6s ease-out;
 }
 
+/* SearchBox */
+
 .search-box{
     width: 100%;
     height: min-content;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    transition: 0.4s ease-in;
 }
 
 .search-box input{
@@ -51,13 +56,36 @@ body{
 }
 
 .search-box button{
+    
+    height: 40px;
+    width: 40px;
+    border-radius: 100%;
+    transition: 0.4s ease;
+    
+
+}
+
+/* x Button */
+
+.ph-x-circle{
+
     cursor: pointer;
     width: 40px;
     height: 40px;
     border-radius: 50%;
     font-size: 40px;
     transition: 0.4s ease;
+
 }
+
+
+.ph-hidden{
+
+    opacity: 0;
+    transition: 0.4 ease;
+}
+
+/* Results Box */
 
 
 .weather-box{
@@ -133,26 +161,6 @@ body{
     font-weight: 500;
 }
 
-.not-found{
-    width: 100%;
-    text-align: center;
-    margin-top: 50px;
-    scale: 0;
-    opacity: 0;
-    display: none;
-}
-
-.not-found img{
-    width: 70%;
-}
-
-.not-found p{
-    color: #06283D;
-    font-size: 22px;
-    font-weight: 500;
-    margin-top: 12px;
-}
-
 .weather-box, .weather-details{
     scale: 0;
     opacity: 0;
@@ -176,6 +184,15 @@ body{
     }
 }
 
+/* Last Search */
+
+.lastSearchContainer{
+
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    margin-top: 2rem;
+    text-align: center;
+}
 
 
 /* Spinner */
